Fix popup buttons getting hidden in overflow and make a few more styles on by default in custom CSS area

--- a/src/content/popup.css
+++ b/src/content/popup.css
@@ -227,3 +227,8 @@ button.easy {
 .state .failed {
   color: rgb(255, 0, 0);
 }
+
+.vocab-content {
+  flex-shrink: 1;
+  overflow-y: scroll;
+}
